Feat: Added Fim Vigencia Logic

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
 
               <div class="flex flex-col gap-1">
                 <label for="observacao" class="active label-input"
-                  >OBSERVAÇÃO</label
+                  >DOTAÇÃO</label
                 >
                 <textarea
                   id="observacao"
