--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       }
 
       .logo {
-        width: 80px;
+        width: 70px;
         aspect-ratio: 1;
         border-radius: 1rem;
         padding: 0.2rem;
@@ -91,7 +91,7 @@
         width: 310px;
         border: 1px solid rgb(218, 218, 218);
         box-shadow: 5px 5px 15px rgb(223, 223, 223);
-        padding: 0.9rem;
+        padding: 0.7rem;
         background-color: white;
         border-radius: 5px;
         outline: none;
@@ -135,7 +135,7 @@
     </style>
   </head>
   <body class="flex justify-center">
-    <div class="flex flex-col py-2 gap-1">
+    <div class="flex flex-col py-2 gap-2">
       <div class="form-top-menu flex w-full items-center justify-between">
         <img
           class="logo"
@@ -164,7 +164,98 @@
           Voltar ao Menu
         </button> -->
       </div>
+      <!-- PESQUISAR CONTRATOS -->
+      <div class="flex w-full justify-center">
+        <p class="p-input">PESQUISAR CONTRATOS</p>
+      </div>
+      <div
+        class="flex items-center w-full bg-white border-1 border-gray-100 rounded-xl"
+      >
+        <div class="flex w-full justify-between gap-4 p-4 shadow-xs rounded-xl">
+          <div class="flex gap-2">
+            <div class="flex flex-col gap-1">
+              <label for="num_sesp" class="active label-input">Nº SESP</label>
+              <input type="number" id="num_sesp" name="num_sesp" required />
+            </div>
+            <div class="flex flex-col gap-1 w-[130px]">
+              <label for="ano_num_sesp" class="active label-input">ANO</label>
+              <input
+                type="number"
+                id="ano_num_sesp"
+                name="ano_num_sesp"
+                value="2025"
+                required
+              />
+            </div>
+          </div>
+          <div class="flex gap-2">
+            <div class="flex flex-col gap-1">
+              <label for="num_gms" class="active label-input">Nº GMS</label>
+              <input
+                type="number"
+                id="num_gms"
+                name="num_gms"
+                min="0"
+                required
+              />
+            </div>
+            <div class="flex flex-col gap-1 w-[130px]">
+              <label for="ano_num_gms" class="active label-input">ANO</label>
+              <input
+                type="number"
+                id="ano_num_gms"
+                name="ano_num_gms"
+                value="2025"
+                required
+              />
+            </div>
+          </div>
 
+          <div class="flex flex-col gap-1">
+            <label for="e_protocolo" class="active label-input"
+              >e-PROTOCOLO</label
+            >
+            <input
+              type="text"
+              id="e_protocolo"
+              name="e_protocolo"
+              placeholder="00.000.000-0"
+              required
+            />
+          </div>
+          <div class="flex flex-col gap-1">
+            <label for="opt_responsavel" class="active label-input"
+              >RESPONSÁVEL</label
+            >
+            <select id="opt_responsavel">
+              <option>Carregando dados...</option>
+            </select>
+          </div>
+        </div>
+
+        <div
+          class="button mt-5 button-blue00 flex justify-center items-center gap-3"
+        >
+          <input type="button" id="btn_menu_find" value="Pesquisar" />
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewbox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="size-6"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
+            />
+          </svg>
+        </div>
+      </div>
+      <div class="flex w-full justify-center">
+        <p class="p-input">LANÇAR DADOS DE CONTRATOS</p>
+      </div>
       <div
         class="flex flex-col p-0 justify-center border-1 border-gray-100 bg-gray-100 rounded-xl"
       >
@@ -468,120 +559,77 @@
                   <option>Carregando dados...</option>
                 </select>
               </div>
+              <div class="flex flex-col justify-end h-80 gap-3 text-center">
+                <div
+                  class="flex flex-col gap-4 p-4 border-1 border-gray-200 hadow-xs rounded-xl"
+                >
+                  <button
+                    class="button button-blue01 flex justify-between items-center gap-3"
+                    id="btn_limpar_contratos"
+                  >
+                    Limpar
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke-width="1.5"
+                      stroke="currentColor"
+                      class="size-5.5"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        d="m20.25 7.5-.625 10.632a2.25 2.25 0 0 1-2.247 2.118H6.622a2.25 2.25 0 0 1-2.247-2.118L3.75 7.5m6 4.125 2.25 2.25m0 0 2.25 2.25M12 13.875l2.25-2.25M12 13.875l-2.25 2.25M3.375 7.5h17.25c.621 0 1.125-.504 1.125-1.125v-1.5c0-.621-.504-1.125-1.125-1.125H3.375c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125Z"
+                      />
+                    </svg>
+                  </button>
+
+                  <button
+                    class="button button-blue01 flex justify-between items-center gap-3"
+                    id="btn_cancelar_edicao_contratos"
+                  >
+                    Cancelar
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke-width="1.5"
+                      stroke="currentColor"
+                      class="size-6"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        d="m9.75 9.75 4.5 4.5m0-4.5-4.5 4.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
+                      />
+                    </svg>
+                  </button>
+
+                  <button
+                    class="button button-blue01 flex justify-between items-center gap-3"
+                    id="btn_enviar_dados_contratos"
+                  >
+                    Enviar
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke-width="1.5"
+                      stroke="currentColor"
+                      class="size-6"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        d="m12.75 15 3-3m0 0-3-3m3 3h-7.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
+                      />
+                    </svg>
+                  </button>
+                </div>
+              </div>
             </div>
           </div>
         </form>
-      </div>
-
-      <div
-        class="flex justify-between items-center w-full bg-[rgba(0,0,0,.02)] border-1 border-gray-100 rounded-xl"
-      >
-        <div class="flex gap-4 p-4 bg-gray-100 shadow-xs rounded-xl">
-          <div
-            class="button button-blue00 flex justify-center items-center gap-3"
-          >
-            <input type="button" id="btn_menu_edit" value="Editar" />
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewbox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="size-6"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10"
-              />
-            </svg>
-          </div>
-          <div
-            class="button button-blue00 flex justify-center items-center gap-3"
-          >
-            <input type="button" id="btn_menu_find" value="Pesquisar" />
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewbox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="size-6"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
-              />
-            </svg>
-          </div>
-        </div>
-        <div class="flex flex-col gap-3 text-center">
-          <div class="flex gap-4 p-4 bg-gray-100 shadow-xs rounded-xl">
-            <button
-              class="button button-blue01 flex justify-center items-center gap-3"
-              id="btn_limpar_contratos"
-            >
-              Limpar
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke-width="1.5"
-                stroke="currentColor"
-                class="size-5.5"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="m20.25 7.5-.625 10.632a2.25 2.25 0 0 1-2.247 2.118H6.622a2.25 2.25 0 0 1-2.247-2.118L3.75 7.5m6 4.125 2.25 2.25m0 0 2.25 2.25M12 13.875l2.25-2.25M12 13.875l-2.25 2.25M3.375 7.5h17.25c.621 0 1.125-.504 1.125-1.125v-1.5c0-.621-.504-1.125-1.125-1.125H3.375c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125Z"
-                />
-              </svg>
-            </button>
-
-            <button
-              class="button button-blue01 flex justify-center items-center gap-3"
-              id="btn_cancelar_edicao_contratos"
-            >
-              Cancelar
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke-width="1.5"
-                stroke="currentColor"
-                class="size-6"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="m9.75 9.75 4.5 4.5m0-4.5-4.5 4.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
-                />
-              </svg>
-            </button>
-
-            <button
-              class="button button-blue01 flex justify-center items-center gap-3"
-              id="btn_enviar_dados_contratos"
-            >
-              Enviar
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke-width="1.5"
-                stroke="currentColor"
-                class="size-6"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="m12.75 15 3-3m0 0-3-3m3 3h-7.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
-                />
-              </svg>
-            </button>
-          </div>
-        </div>
       </div>
     </div>
     <?!= include('script-forms');?>
