--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     </style>
   </head>
   <body class="flex justify-center">
-    <div class="flex flex-col py-2 gap-2  px-0">
+    <div class="flex flex-col py-2 gap-2 px-0">
       <div class="form-top-menu flex w-full items-center justify-between">
         <img
           class="logo"
@@ -169,16 +169,23 @@
         <p class="p-input font-semibold text-gray-600">PESQUISAR CONTRATOS</p>
       </div>
       <div
-        class="flex items-center p-4 w-full border-1  border-gray-100 rounded-xl"
+        class="flex items-center p-4 w-full border-1 border-gray-100 rounded-xl"
       >
         <div class="flex w-full gap-4 rounded-xl">
           <div class="flex gap-2">
             <div class="flex flex-col gap-1">
               <label for="num_sesp" class="active label-input">Nº SESP</label>
-              <input type="number" id="num_sesp_search" name="num_sesp_search" required />
+              <input
+                type="number"
+                id="num_sesp_search"
+                name="num_sesp_search"
+                required
+              />
             </div>
             <div class="flex flex-col gap-1 w-[130px]">
-              <label for="ano_num_sesp_search" class="active label-input">ANO</label>
+              <label for="ano_num_sesp_search" class="active label-input"
+                >ANO</label
+              >
               <input
                 type="number"
                 id="ano_num_ses_search"
@@ -204,7 +211,9 @@
 
           <div class="flex gap-2">
             <div class="flex flex-col gap-1">
-              <label for="num_gms_search" class="active label-input">Nº GMS</label>
+              <label for="num_gms_search" class="active label-input"
+                >Nº GMS</label
+              >
               <input
                 type="number"
                 id="num_gms_search"
@@ -214,7 +223,9 @@
               />
             </div>
             <div class="flex flex-col gap-1 w-[130px]">
-              <label for="ano_num_gms_search" class="active label-input">ANO</label>
+              <label for="ano_num_gms_search" class="active label-input"
+                >ANO</label
+              >
               <input
                 type="number"
                 id="ano_num_gms_search"
@@ -257,16 +268,15 @@
       </div>
 
       <div class="flex w-full justify-center">
-        <p class="p-input font-semibold text-gray-600">LANÇAR DADOS DE CONTRATOS</p>
+        <p class="p-input font-semibold text-gray-600">
+          LANÇAR DADOS DE CONTRATOS
+        </p>
       </div>
       <!-- BLOCO FORMULARIO LANÇAR DADOS -->
       <div
         class="flex flex-col p-0 justify-center border-1 border-gray-100 bg-gray-100 rounded-xl"
       >
-        <form
-          id="form_contratos"
-          class="rounded-xl p-2 flex justify-center"
-        >
+        <form id="form_contratos" class="rounded-xl p-2 flex justify-center">
           <!-- FORM COL INPUT 1 -->
           <div
             class="flex flex-col p-4 border-r-1 border-gray-200 gap-4 w-full"
@@ -544,7 +554,7 @@
               </div>
             </div>
           </div>
-          <div class="flex flex-col gap-0  ">
+          <div class="flex flex-col gap-0">
             <div class="flex flex-col p-4 gap-4 w-[320px]">
               <div class="flex flex-col gap-1">
                 <label for="cnpj_contratada" class="active label-input"
@@ -552,6 +562,9 @@
                 >
                 <input
                   type="text"
+                  maxlength="18"
+                  oninput="applyMask(this)"
+                  onblur="buscarCNPJ()"
                   id="cnpj_contratada"
                   name="cnpj_contratada"
                   placeholder="00.000.000/0000-00"
@@ -598,9 +611,7 @@
             </div>
 
             <div class="flex flex-col justify-end gap-1 text-center">
-              <div
-                class="flex gap-1 px-4 mt-25 shadow-xs rounded-xl"
-              >
+              <div class="flex gap-1 px-4 mt-25 shadow-xs rounded-xl">
                 <!-- <button
                   class="button button-blue01 flex justify-between items-center gap-3"
                   id="btn_limpar_contratos"
