--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <base target="_top" />
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <script src="./src/front/scripts/script_forms.js"></script>
   <link rel="icon" type="image/x-icon" href="https://web.celepar.pr.gov.br/drupal/images/logo_parana_400x173.png" />
 
   <style>
@@ -188,27 +189,16 @@
     </button>
 
       <div id="secao-pesquisa" class="overflow-hidden transition-all duration-500 max-h-0 px-4">
+        
         <!-- conteúdo da pesquisa aqui -->
         <div class="py-4">
-
-
           <div class="flex items-center p-4 w-full border-1  border-gray-100 rounded-xl">
             <div class="flex w-full gap-4 rounded-xl">
               <div class="flex gap-2">
                 <div class="flex flex-col gap-1">
                   <label for="num_sesp" class="active label-input">Nº SESP</label>
-                  <input type="number" id="num_sesp_search" name="num_sesp_search" required />
-                </div>
-                <div class="flex flex-col gap-1 w-[130px]">
-                  <label for="ano_num_sesp_search" class="active label-input">ANO</label>
-                  <input
-                type="number"
-                id="ano_num_ses_search"
-                name="ano_num_sesp_search"
-                value="2025"
-                required
-              />
-                </div>
+                  <input type="text" id="num_sesp_search" name="num_sesp_search" required />
+                </div>           
               </div>
 
               <div class="flex flex-col gap-1">
@@ -227,20 +217,9 @@
                 <div class="flex flex-col gap-1">
                   <label for="num_gms_search" class="active label-input">Nº GMS</label>
                   <input
-                type="number"
+                type="text"
                 id="num_gms_search"
-                name="num_gms_search"
-                min="0"
-                required
-              />
-                </div>
-                <div class="flex flex-col gap-1 w-[130px]">
-                  <label for="ano_num_gms_search" class="active label-input">ANO</label>
-                  <input
-                type="number"
-                id="ano_num_gms_search"
-                name="ano_num_gms_search"
-                value="2025"
+                name="num_gms_search"               
                 required
               />
                 </div>
@@ -267,14 +246,15 @@
         </div>
       </div>
     </div>
+
     <!-- <div class="flex w-full justify-center">
         <p class="p-input font-semibold text-gray-600">PESQUISAR CONTRATOS</p>
       </div> -->
 
-
     <!-- <div class="flex w-full justify-center">
         <p class="p-input font-semibold text-gray-600">LANÇAR DADOS DE CONTRATOS</p>
       </div> -->
+
     <!-- BLOCO FORMULARIO LANÇAR DADOS -->
     <div class="rounded-lg">
       <button
